@@ -1,3 +1,7 @@
+Fri Oct 14 18:40:59 1994  Gray Watson  (gray at toaster.antaire.com)
+
+	* Fixed dumb errors with FUNC_CHECK code.  Thanks Dave.
+
 Thu Oct 13 21:25:52 1994  Gray Watson  (gray@blender.antaire.com)
 
 	* Added default tags: default,low,medium,high,all to dmalloc.
@@ -856,5 +860,5 @@ Thu Mar 12 19:28:34 1992  Gray Watson  (gray@toaster.antaire.com)
 	* Started ChangeLog.
 
 -------------------------------------------------------------------------------
-$Id: ChangeLog,v 1.123 1994/10/14 02:04:23 gray Exp $
+$Id: ChangeLog,v 1.124 1994/10/14 22:41:33 gray Exp $
 -------------------------------------------------------------------------------
